--- a/task5/style.css
+++ b/task5/style.css
@@ -23,9 +23,15 @@ body{
 .head3,h1,a{
     align-items: center;
 }
+.head1:hover{
+    scale: 1.2;
+    transition: 1s;
+    transform: rotate(-15deg);
+}
 h1:hover{
     scale: 1.2;
     transition: 1s;
+   
 }
 
 .head2:hover{
@@ -45,4 +51,5 @@ h1:hover{
     scale: 1.1;
     transition: 1s;
     background-color: aqua;
+    border-radius: 50px;
 }
