--- a/task7/style.css
+++ b/task7/style.css
@@ -17,16 +17,28 @@ body{
     margin: 14px;
     position: relative;
     background-color: aqua;
-    padding: 20px;
+    padding: 30px;
+    border: 2px solid;
+    
+    
 }
 .img4 ,.img5 ,.img6{
     margin: 14px;
     position: relative;
     background-color: blueviolet;
-    padding: 20px;
+    padding: 30px;
+    border: 2px solid;
 }
 a{
     position: absolute;
-   right: 65px;
-   top: 135px;
+   right: 68.5px;
+   top: 150px;
+   text-decoration: none;
+}
+a:hover{
+    color: red;
+}
+
+.img2:hover{
+    background-color: rgb(7, 36, 36);
 }
