--- a/task7/style.css
+++ b/task7/style.css
@@ -1,9 +1,9 @@
 body{
-    background-color: aliceblue;
+    background-image: linear-gradient(to right ,pink,gray);
 }
 .main{
-    margin-left: 190px;
-    margin-top: 80px;
+    margin-left: 350px;
+    margin-top: 170px;
 }
 .head1{
     display: flex;
@@ -17,7 +17,7 @@ body{
     margin: 14px;
     position: relative;
     background-color: aqua;
-    padding: 30px;
+    padding: 40px;
     border: 2px solid;
     
     
@@ -26,13 +26,15 @@ body{
     margin: 14px;
     position: relative;
     background-color: blueviolet;
-    padding: 30px;
+    padding: 40px;
     border: 2px solid;
+    border-radius: 10px;
+    
 }
 a{
     position: absolute;
-   right: 68.5px;
-   top: 150px;
+   right: 80px;
+   top: 165px;
    text-decoration: none;
 }
 a:hover{
@@ -46,5 +48,10 @@ a:hover{
 img:hover{
     scale: 1.2;
     transition: 1.4s;
+    border-radius: 30px;
 
+}
+div:hover{
+    border-radius: 100%;
+    transition: 1.4s;
 }
