--- a/task7/style.css
+++ b/task7/style.css
@@ -1,112 +1,70 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background-image: linear-gradient(to right, rgb(209, 20, 168), rgb(255, 255, 255));
+    font-family: 'Poppins', sans-serif;
+    background-color: darkorchid;
 }
 
-.main {
-    margin-left: 300px;
-    margin-top: 70px;
-}
-
-h1 {
+.titlebar {
+    padding: 10px;
+    background: linear-gradient(14deg, rgb(238, 215, 13), rgb(255, 255, 255));
+    font-size: 40px;
+    font-weight: 600px;
     text-align: center;
-    margin-top: 30px;
-    font-size: 35px;
-    font-style: oblique;
-    font-family: cursive;
-    background: linear-gradient(rgb(63, 10, 255), rgb(201, 54, 152));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-.head1 {
+.container div {
+    margin: 10px;
+    flex-basis: 20%;
+    background-color: rgb(80, 86, 92);
+    padding: 10px 2.5%;
+    text-align: center;
+}
+
+.container {
     display: flex;
-    margin: 12px;
-    margin-left: 2px;
-}
-
-.head2 {
-    display: flex;
-}
-
-h1:hover {
-    scale: 1.2;
-    transition: 1s;
-    transform: rotate(-15deg);
+    flex-wrap: wrap;
+    justify-content: space-around;
+    /* flex-direction: row-reverse; */
 
 }
 
-.img1,
-.img2,
-.img3 {
-    margin: 14px;
-    position: relative;
-    padding: 40px;
-    border: 2px solid;
+.container,
+.box,
+h1 {
+    color: white;
+    font-size: 18px;
 }
 
-.img4,
-.img5,
-.img6 {
-    margin: 14px;
-    position: relative;
-    background-color: blueviolet;
-    padding: 40px;
-    border: 2px solid;
-}
+.main .container .box,
+img {
 
-a {
-    position: absolute;
-    right: 80px;
-    top: 165px;
-    text-decoration: none;
-}
-
-a:hover {
-    color: red;
-}
-
-.img2:hover {
-    /* background-color: rgb(7, 36, 36); */
-    background: linear-gradient(rgb(15, 235, 243), rgb(25, 136, 201));
-}
-
-.img1:hover {
-    /* background-color: rgb(50, 107, 230); */
-    background: linear-gradient(gold, rgb(131, 212, 131));
-}
-
-.img3:hover {
-    /* background-color: rgb(241, 26, 26); */
-    background: linear-gradient(rgb(122, 28, 126), rgb(130, 28, 214));
-}
-
-.img4:hover {
-    /* background-color: rgb(182, 226, 24); */
-    background: linear-gradient(rgb(218, 27, 106), rgb(228, 126, 10));
-}
-
-.img5:hover {
-    /* background-color: rgb(15, 238, 63); */
-    background: linear-gradient(rgb(8, 211, 126), rgb(126, 141, 126));
-}
-
-.img6:hover {
-    /* background-color: rgb(230, 173, 50); */
-    background: linear-gradient(rgb(6, 111, 182), rgb(187, 23, 228));
-
-}
-
-img:hover {
-    scale: 1.2;
-    transition: 1.4s;
-    border-radius: 30px;
-}
-
-div {
     border-radius: 20px;
+
+
 }
 
-div:hover {
-    border-radius: 100%;
-    transition: 1.4s;
+.container .box button {
+    padding: 4px 9px;
+    border-radius: 10px;
+    display: inline-block;
+    margin: 19px;
+
+}
+
+.container .box button:hover {
+    letter-spacing: 1px;
+}
+
+
+.box:hover {
+    box-shadow: 0 10px 15px rgba(0, 0, 0, .7);
+    transform: scale(1.02);
+    transition: 1.2s;
 }
