--- a/task10/style.css
+++ b/task10/style.css
@@ -206,7 +206,7 @@ body {
 .bg2 {
     background-color: black;
     width: 100%;
-    height: 500px;
+    height: 25%;
     margin-top: 30px;
     padding: 10px 60px;
     display: flex;
@@ -226,8 +226,9 @@ body {
 }
 
 .bg-img2-content {
-    /* width: 45%; */
+    width: 45%;
     height: fit-content;
+    /* height: 500px; */
     background-color: black;
     color: white;
     padding-left: 120px;
@@ -255,6 +256,7 @@ body {
 
 .bg-img2-content ul {
     margin: 20px 20px;
+    height: auto;
 }
 
 .bg-img2-content ul li {
@@ -318,7 +320,6 @@ body {
     margin-top: 0px;
     margin-left: 70px;
     text-align: start;
-    box-shadow: ;
 
 }
 
@@ -349,7 +350,7 @@ body {
     background-color: rgb(0, 0, 0);
     color: white;
     transition: .4s ease-in;
-    box-shadow: ;
+
     border-radius: 5px;
 }
 
@@ -358,19 +359,20 @@ body {
     box-shadow: inset 140px 30px 15px blue, inset -140px -30px 15px blue;
 }
 
-footer{
+footer {
     position: absolute;
     background-color: black;
     width: 100%;
     height: 200px;
 }
-/* .footer-box{
+
+.footer-box{
     background-color: rgb(0, 0, 0);
     width: 100%;
     height: 200px;
     position: relative;
-} */
-/* .ft{
+} 
+.ft{
     position: absolute;
     background: transparent;
 }
@@ -378,4 +380,4 @@ footer{
    
     background: transparent;
     color: white;
-} */
+}
