--- a/task20/style.css
+++ b/task20/style.css
@@ -88,8 +88,9 @@ img:hover{
 }
 
 .img-content h4 {
-    font-weight: 400;
+    font-weight: 500;
     font-family: 'Poppins', sans-serif;
+    font-size: 15.3px;
 }
 
 .img-content .p-bg {
