--- a/calculator/style.css
+++ b/calculator/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+body{
+    /* background:linear-gradient(160deg , rgba(0, 0, 255, 0.575), rgba(128, 128, 128, 0.459)); */
+}
+
 .main{
     display: flex;
     justify-content: center;
@@ -16,6 +20,7 @@
 
 .calculator{
     background-color: rgba(128, 128, 128, 0.548);
+    /* background-color: rgba(255, 255, 255, 0); */
     padding: 20px;
     border-radius: 30px;
     box-shadow: inset 0px 5px 12px #ffff,
